feat(upgrade): build project with Confit v1.7.0

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -25,6 +25,7 @@
 <body>
 
   <div ng-view></div>
+  <div class="css-type"></div>
 
 <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
 <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
